2024-11-15  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * elliptic.tcl: Correct the description of dn (pers.comm. K. Koehler)

2024-01-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * statistics.test: Correct mistake with srand function (pers.comm. A. Kupries)

2024-01-15  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * statistics.test: Fix the seed of the random number generator as sporadically tests would fail (pers.comm. A. Kupries)
        * math.man: Correct the description of the math::sigma procedure (ticket 30f909e66eee1aebdb6e6ea8de62a8fbf194cde7)

2023-04-03  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * statistics.man: Correction in the description of mv-wls
        * mvlinreg.tcl: Correction in the header

2022-06-05  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * rootfind.tcl: New file containing the new root-findng procedures
        * calculus.tcl: Add a "source" command for rootfind.tcl, bump version to 1.0
        * calculus.test: Add tests for the root-finding procedures
        * calculus.man: Description of the root-finding procedures
        * pkgIndex.tcl: Bump version to 1.0

2022-04-26  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * figurate.tcl: Correct the implementation of various procedures (note: consistent handling of "no objects")
        * figurate.test: Correct the test cases
        * figurate.man: Add note about zero or less objects

2021-10-31  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * figurate.tcl: Evaluate various "figurate" numbers (new package, ticket f8adb7a036)
        * figurate.test: Corresponding tests
        * figurate.man: Description of the figurate procedures
        * pkgIndex.tcl: Added the new package

2021-05-29  Arjen Markus <arjenmarkus@users.sourceforge.net>
        * elliptic.tcl: Correct the implementation of "dn" (ticket 828109660d)
        * elliptic.test: Add proper tests for sn, cn and dn